Some work on deinflector

--- a/ext/background.html
+++ b/ext/background.html
@@ -3,6 +3,7 @@
 <body>
     <script src="lib/jquery-2.2.2.min.js"></script>
     <script src="jp/dictionary.js"></script>
+    <script src="jp/deinflector.js"></script>
     <script src="jp/translator.js"></script>
 </body>
 </html>
