File reorg and cleanup

--- a/ext/background.html
+++ b/ext/background.html
@@ -5,6 +5,6 @@
     <script src="jp/dictionary.js"></script>
     <script src="jp/deinflector.js"></script>
     <script src="jp/translator.js"></script>
-    <script src="jp/init.js"></script>
+    <script src="jp/api.js"></script>
 </body>
 </html>
