--- a/ext/background.html
+++ b/ext/background.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <body>
     <script src="lib/jquery-2.2.2.min.js"></script>
-    <script src="jp/dictionary.js"></script>
-    <script src="jp/deinflector.js"></script>
-    <script src="jp/translator.js"></script>
-    <script src="jp/yomichan.js"></script>
+    <script src="bg/dictionary.js"></script>
+    <script src="bg/deinflector.js"></script>
+    <script src="bg/translator.js"></script>
+    <script src="bg/yomichan.js"></script>
 </body>
 </html>
