Switch to handlebars for templating

--- a/ext/background.html
+++ b/ext/background.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
+    <script src="lib/handlebars.min.js"></script>
     <script src="lib/jquery-2.2.2.min.js"></script>
+    <script src="bg/templates.js"></script>
     <script src="bg/dictionary.js"></script>
     <script src="bg/deinflector.js"></script>
     <script src="bg/translator.js"></script>
