--- a/util/tmpl/defs.html
+++ b/util/tmpl/defs.html
@@ -1,9 +1,6 @@
 {{#each defs}}
 <div class="yomichan-def">
-    <div class="yomichan-def-expression">{{expression}}</div>
-    {{#if reading}}
-    <div class="yomichan-def-reading">{{reading}}</div>
-    {{/if}}
-    <div class="yomichan-def-glossary">{{glossary}}</div>
+    {{> term.html}}
+    {{#unless @last}}<br>{{/unless}}
 </div>
 {{/each}}
