--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <body>
-    <script src="../lib/handlebars.min.js"></script>
-    <script src="../lib/jquery-2.2.2.min.js"></script>
+    <script src="lib/handlebars.min.js"></script>
+    <script src="lib/jquery-2.2.2.min.js"></script>
     <script src="templates.js"></script>
     <script src="dictionary.js"></script>
     <script src="deinflector.js"></script>
