--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Here go options</title>
-</head>
-<body>
-    Options!
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Here go options</title>
+        <link rel="text/stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+        <link rel="text/stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
+    </head>
+    <body>
+        <div class="container">
+            <div clss="page-header">
+                <h1>Options</h1>
+            </div>
+
+            <script src="lib/jquery-2.2.2.min.js"></script>
+            <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+        </div>
+    </body>
 </html>
