--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Here go options</title>
-        <link rel="text/stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
-        <link rel="text/stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" href="lib/bootstrap-3.3.6-dist/css/bootstrap-theme.min.css">
     </head>
     <body>
         <div class="container">
-            <div clss="page-header">
+            <div class="page-header">
                 <h1>Options</h1>
             </div>
 
