--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -14,6 +14,7 @@
 
             <script src="lib/jquery-2.2.2.min.js"></script>
             <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+            <script src="options.js"></script>
         </div>
     </body>
 </html>
