--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -12,6 +12,13 @@
                 <h1>Options</h1>
             </div>
 
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label for="scanLength" class="control-label col-sm-2">Scan length</label>
+                    <div class="col-sm-10"><input type="number" value="0" min="1" id="scanLength" class="form-control"></div>
+                </div>
+            </form>
+
             <script src="lib/jquery-2.2.2.min.js"></script>
             <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
             <script src="options.js"></script>
