--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -17,11 +17,37 @@
                     <label for="scanLength" class="control-label col-sm-2">Scan length</label>
                     <div class="col-sm-10"><input type="number" value="1" min="1" id="scanLength" class="form-control"></div>
                 </div>
+
+                <div class="text-right">
+                    <button type="button" id="saveOptions" class="btn btn-default">Save</button>
+                    <button type="button" id="resetOptions" class="btn btn-danger">Reset</button>
+                </div>
             </form>
 
             <script src="lib/jquery-2.2.2.min.js"></script>
             <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
             <script src="options.js"></script>
+
+            <script>
+                $('#saveOptions').click(() => saveOptions(sanitizeOptions(formToOptions())));
+                $('#resetOptions').click(() => {
+                    if (confirm('Reset options to defaults?')) {
+                        optionsToForm(sanitizeOptions({}));
+                    }
+                });
+
+                function optionsToForm(opts) {
+                    $('#scanLength').val(opts.scanLength);
+                }
+
+                function formToOptions() {
+                    return {
+                        scanLength: $('#scanLength').val()
+                    };
+                }
+
+                loadOptions((opts) => optionsToForm(sanitizeOptions(opts)));
+            </script>
         </div>
     </body>
 </html>
