--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -3,10 +3,10 @@
 <body>
     <script src="lib/handlebars.min.js"></script>
     <script src="lib/jquery-2.2.2.min.js"></script>
-    <script src="templates.js"></script>
-    <script src="dictionary.js"></script>
-    <script src="deinflector.js"></script>
-    <script src="translator.js"></script>
-    <script src="yomichan.js"></script>
+    <script src="js/templates.js"></script>
+    <script src="js/dictionary.js"></script>
+    <script src="js/deinflector.js"></script>
+    <script src="js/translator.js"></script>
+    <script src="js/yomichan.js"></script>
 </body>
 </html>
