--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -26,8 +26,8 @@
 
             <script src="lib/jquery-2.2.2.min.js"></script>
             <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
-            <script src="options.js"></script>
-            <script src="options-form.js"></script>
+            <script src="js/options.js"></script>
+            <script src="js/options-form.js"></script>
         </div>
     </body>
 </html>
