--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -15,7 +15,17 @@
             <form class="form-horizontal">
                 <div class="form-group">
                     <label for="scanLength" class="control-label col-sm-2">Scan length</label>
-                    <div class="col-sm-10"><input type="number" value="1" min="1" id="scanLength" class="form-control"></div>
+                    <div class="col-sm-10"><input type="number" value="20" min="1" id="scanLength" class="form-control"></div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox" id="loadOnStartup"> Load on startup
+                            </label>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="text-right">
