--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -21,9 +21,15 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <div class="checkbox">
-                            <label>
-                                <input type="checkbox" id="loadOnStartup"> Load on startup
-                            </label>
+                            <label><input type="checkbox" id="loadOnStartup"> Load on startup</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label><input type="checkbox" id="highlightText" checked> Highlight text</label>
                         </div>
                     </div>
                 </div>
