Show definitions as lists

--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -1,3 +1,9 @@
 <div class="yomichan-def-expression">{{expression}}</div>
 {{#if reading}}<div class="yomichan-def-reading">{{reading}}</div>{{/if}}
-<div class="yomichan-def-glossary">{{glossary}}</div>
+<div class="yomichan-def-glossary">
+    <ol>
+        {{#each glossary}}
+        <li>{{.}}</li>
+        {{/each}}
+    </ol>
+</div>
