--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -4,16 +4,19 @@
 <div class="expression">{{expression}}</div>
 {{/if}}
 
+{{#if rules}}
 <div class="rules">
-    {{#if rules}}
-    {{rules}}
-    {{/if}}
+    {{#each rules}}
+    {{.}}
+    {{#unless @last}} &laquo; {{/unless}}
+    {{/each}}
 </div>
+{{/if}}
 
 <div class="glossary">
     <ol>
         {{#each glossary}}
-        <li>{{.}}</li>
+        <li><span>{{.}}</span></li>
         {{/each}}
     </ol>
 </div>
