Fix options dialog

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -59,8 +59,8 @@
                 </div>
             </form>
 
-            <script src="lib/jquery-2.2.2.min.js"></script>
-            <script src="lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
+            <script src="../lib/jquery-2.2.2.min.js"></script>
+            <script src="../lib/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
             <script src="js/options.js"></script>
             <script src="js/options-form.js"></script>
         </div>
