--- a/util/tmpl/defs.html
+++ b/util/tmpl/defs.html
@@ -15,5 +15,7 @@
             {{> term.html}}
         </div>
         {{/each}}
+
+    <script src="{{root}}/js/popup.js"></script>
     </body>
 </html>
