--- a/util/tmpl/defs.html
+++ b/util/tmpl/defs.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="dictionary">
-            <a href="javascript:selectDict('edict');">単</a><a href="javascript:selectDict('enamdict')">名</a><a href="javascript:selectDict('kanjidic');">漢</a>
+            <a href="javascript:setActiveDict('edict');">単</a><a href="javascript:setActiveDict('enamdict')">名</a><a href="javascript:setActiveDict('kanjidic');">漢</a>
         </div>
 
         {{#each defs}}
