--- a/util/tmpl/header.html
+++ b/util/tmpl/header.html
@@ -7,5 +7,5 @@
     </head>
     <body>
         <div class="dictionary">
-            <a href="javascript:setActiveDict('edict');">単</a><a href="javascript:setActiveDict('enamdict')">名</a><a href="javascript:setActiveDict('kanjidic');">漢</a>
+            <a href="javascript:selectDict('edict');">単</a><a href="javascript:selectDict('enamdict')">名</a><a href="javascript:selectDict('kanjidic');">漢</a>
         </div>
