--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -1,7 +1,7 @@
 {{#if reading}}
-<div class="term"><ruby>{{expression}}<rt>{{reading}}</rt></ruby></div>
+<div class="term"><ruby>{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}<rt>{{reading}}</rt></ruby></div>
 {{else}}
-<div class="term">{{expression}}</div>
+<div class="term">{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}</div>
 {{/if}}
 
 {{#if rules}}
