--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -15,7 +15,7 @@
 {{#if tags}}
 <div class="tags">
     {{#each tags}}
-    <span class="tag" title="{{desc}}">{{@key}}</span>
+    <span class="tag {{#if class}}tag-{{class}}{{else}}tag-default{{/if}}" title="{{desc}}">{{@key}}</span>
     {{/each}}
 </div>
 {{/if}}
