--- a/util/tmpl/header.html
+++ b/util/tmpl/header.html
@@ -3,6 +3,6 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
-        <link rel="stylesheet" href="{{root}}/css/popup.css">
+        <link rel="stylesheet" href="{{root}}/css/frame.css">
     </head>
     <body>
