--- a/util/tmpl/header.html
+++ b/util/tmpl/header.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title></title>
+        <style>
+            @font-face {
+                font-family: "KanjiStrokeOrders";
+                src:         url("{{root}}/ttf/kanji-stroke-orders.ttf");
+            }
+        </style>
         <link rel="stylesheet" href="{{root}}/css/frame.css">
     </head>
     <body>
