Updating options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -34,7 +34,15 @@
                 <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                         <div class="checkbox">
-                            <label><input type="checkbox" id="highlightText" checked> Highlight text</label>
+                            <label><input type="checkbox" id="selectMatchedText" checked> Select matched text</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-10">
+                        <div class="checkbox">
+                            <label><input type="checkbox" id="enableAnkiConnect" checked> Enable AnkiConnect</label>
                         </div>
                     </div>
                 </div>
