Show action icons

--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -1,4 +1,12 @@
 <div class="term-definition">
+    <div class="action-icons">
+        {{#with addable}}
+        {{#if vocabExp}}<a href="#" title="Add as expression"><img src="{{../root}}/img/icon_add_expression.png"></a>{{/if}}
+        {{#if vocabReading}}<a href="#" title="Add as reading"><img src="{{../root}}/img/icon_add_reading.png"></a>{{/if}}
+        {{/with}}
+        <a href="#" title="Copy definition"><img src="{{root}}/img/icon_copy_definition.png"></a>
+    </div>
+
     {{#if reading}}
     <div class="term-expression"><ruby>{{#kanjiLinks}}{{expression}}{{/kanjiLinks}}<rt>{{reading}}</rt></ruby></div>
     {{else}}
