--- a/util/tmpl/term-list.html
+++ b/util/tmpl/term-list.html
@@ -1,5 +1,5 @@
 {{> header.html}}
 {{#each defs}}
-{{> term.html root=../root}}
+{{> term.html root=../root options=../options}}
 {{/each}}
 {{> footer.html}}
