--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -3,19 +3,10 @@
 
     {{#with options}}
     {{#if enableAnkiConnect}}
-    <div class="action-icons">
+    <div class="action-bar">
         {{#with ../addable}}
-        {{#if vocabExp}}
-        <a href="#" title="Add as expression"><img src="{{../../root}}/img/add_expression.png"></a>
-        {{else}}
-        <img src="{{../../root}}/img/add_expression.png" class="inactive">
-        {{/if}}
-
-        {{#if vocabReading}}
-        <a href="#" title="Add as reading"><img src="{{../../root}}/img/add_reading.png"></a>
-        {{else}}
-        <img src="{{../../root}}/img/add_reading.png" class="inactive">
-        {{/if}}
+        <a href="#" title="Add as expression" class="{{#unless vocabExp}}disabled{{/unless}}"><img src="{{../../root}}/img/add_expression.png"></a>
+        <a href="#" title="Add as reading" class="{{#unless vocabExp}}disabled{{/unless}}"><img src="{{../../root}}/img/add_reading.png"></a>
         {{/with}}
     </div>
     {{/if}}
