--- a/util/tmpl/term.html
+++ b/util/tmpl/term.html
@@ -1,12 +1,10 @@
 <div class="term-definition">
-    {{id}}
-
     {{#with options}}
     {{#if enableAnkiConnect}}
     <div class="action-bar">
         {{#with ../addable}}
-        <a href="#" title="Add as expression" class="{{#unless vocabExp}}disabled{{/unless}}"><img src="{{../../root}}/img/add_expression.png"></a>
-        <a href="#" title="Add as reading" class="{{#unless vocabExp}}disabled{{/unless}}"><img src="{{../../root}}/img/add_reading.png"></a>
+        <a href="#" title="Add as expression" class="action-link {{#unless vocabExp}}disabled{{/unless}}" data-mode="vocabExp" data-index="{{@index}}"><img src="{{../../root}}/img/add_expression.png"></a>
+        <a href="#" title="Add as reading" class="action-link {{#unless vocabExp}}disabled{{/unless}}" data-mode="vocabReading" data-index="{{@index}}"><img src="{{../../root}}/img/add_reading.png"></a>
         {{/with}}
     </div>
     {{/if}}
