--- a/util/tmpl/kanji.html
+++ b/util/tmpl/kanji.html
@@ -1,7 +1,7 @@
 <div class="kanji-definition">
     {{#with options}}
     {{#if enableAnkiConnect}}
-    <a href="#" title="Add Kanji" class="action-link disabled" data-mode="kanji" data-index="{{@index}}"><img src="{{../root}}/add_kanji.png"></a>
+    <a href="#" title="Add Kanji" class="action-link disabled" data-sequence="{{../sequence}}" data-mode="kanji" data-index="{{@index}}"><img src="{{../root}}/add_kanji.png"></a>
     {{/if}}
     {{/with}}
 
