--- a/util/tmpl/kanji-list.html
+++ b/util/tmpl/kanji-list.html
@@ -1,5 +1,5 @@
 {{> header.html}}
 {{#each defs}}
-{{> kanji.html root=../root options=../options}}
+{{> kanji.html root=../root options=../options sequence=../sequence}}
 {{/each}}
 {{> footer.html}}
